--- a/assistant/data/nlu/nlu.yml
+++ b/assistant/data/nlu/nlu.yml
@@ -135,6 +135,19 @@ nlu:
     - please no
     - no don't do that
     - no, use abraham.lincoln@example.com
+- intent: chitchat/ask_weather
+  examples: |
+    - what's the weather outside?
+    - can you tell me the weather
+    - I would like to know what the weather will be tomorrow
+    - tell me the weather
+- intent: chitchat/bot_challenge
+  examples: |
+    - are you a bot?
+    - am I talking to a chatbot?
+    - are you a bot or a human?
+    - I think you are a bot
+    
 - synonym: high
   examples: |
     - urgent
