--- a/assistant/data/stories/stories.yml
+++ b/assistant/data/stories/stories.yml
@@ -28,5 +28,9 @@ stories:
   - action: utter_greet
   - action: utter_help
   - intent: incident_status
+  - action: utter_ask_number
+  - intent: inform
+    entities:
+    - number: "12345"
   - action: action_incident_status
 
