--- a/assistant/domain.yml
+++ b/assistant/domain.yml
@@ -18,6 +18,7 @@ intents:
 
 entities:
 - priority
+- number
 
 slots:
   confirm:
@@ -25,6 +26,8 @@ slots:
   incident_title:
     type: any
   problem_description:
+    type: any
+  number:
     type: any
 
 
@@ -67,6 +70,8 @@ responses:
     - text: I am not a weather presenter, but I hope it will be sunny
   utter_chitchat/bot_challenge:
     - text: Yes indeed. I was created by Rasa developer.
+  utter_ask_number:
+    - text: What is your user ID?
 
 actions:
 - action_incident_status
